*SVN*

* Fixed that clear_association_cache doesn't delete new associations on new records (so you can safely place new records in the session with Action Pack without having new associations wiped) #1494 [cluon]

* Fixed that calling Model.find([]) returns [] and doesn't throw an exception #1379

* Fixed that adding a record to a has_and_belongs_to collection would always save it -- now it only saves if its a new record #1203 [Alisdair McDiarmid]

* Fixed saving of in-memory association structures to happen as a after_create/after_update callback instead of after_save -- that way you can add new associations in after_create/after_update callbacks without getting them saved twice

* Allow any Enumerable, not just Array, to work as bind variables #1344 [Jeremy Kemper]

* Added actual database-changing behavior to collection assigment for has_many and has_and_belongs_to_many #1425 [Sebastian Kanthak].
  Example:

    david.projects = [Project.find(1), Project.new("name" => "ActionWebSearch")]
    david.save
  
  If david.projects already contain the project with ID 1, this is left unchanged. Any other projects are dropped. And the new
  project is saved when david.save is called.
  
  Also included is a way to do assignments through IDs, which is perfect for checkbox updating, so you get to do:
  
    david.project_ids = [1, 5, 7]

* Corrected typo in find SQL for has_and_belongs_to_many.  #1312 [ben@bensinclair.com]

* Fixed sanitized conditions for has_many finder method.  #1281 [jackc@hylesanderson.com, pragdave, Tobias Luetke]

* Comprehensive PostgreSQL schema support.  Use the optional schema_search_path directive in database.yml to give a comma-separated list of schemas to search for your tables.  This allows you, for example, to have tables in a shared schema without having to use a custom table name.  See http://www.postgresql.org/docs/8.0/interactive/ddl-schemas.html to learn more.  #827 [dave@cherryville.org]
