@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed that validations didn't respecting custom setting for too_short, too_long messages #1437 [Marcel Molina]
+
 * Fixed that clear_association_cache doesn't delete new associations on new records (so you can safely place new records in the session with Action Pack without having new associations wiped) #1494 [cluon]
 
 * Fixed that calling Model.find([]) returns [] and doesn't throw an exception #1379
